// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Uninstalling the slack app deletes all corresponding subscriptions 1`] = `
Object {
  "channelId": "C0012",
  "createdAt": Any<Date>,
  "creatorId": "1",
  "deletedAt": Any<Date>,
  "githubId": "1234",
  "githubName": "foo/repo1",
  "id": "1",
  "installationId": "1",
  "reason": "slack app uninstalled",
  "settings": Object {
    "commits": true,
    "pulls": true,
  },
  "slackWorkspaceId": "1",
  "type": "repo",
  "updatedAt": Any<Date>,
}
`;

exports[`Uninstalling the slack app deletes all corresponding subscriptions 2`] = `
Object {
  "channelId": "C0234",
  "createdAt": Any<Date>,
  "creatorId": "1",
  "deletedAt": Any<Date>,
  "githubId": "4321",
  "githubName": "foo/repo2",
  "id": "2",
  "installationId": "1",
  "reason": "slack app uninstalled",
  "settings": Object {
    "commits": true,
    "pulls": true,
  },
  "slackWorkspaceId": "1",
  "type": "repo",
  "updatedAt": Any<Date>,
}
`;

exports[`Uninstalling the slack app deletes all corresponding subscriptions 3`] = `
Object {
  "channelId": "C0012",
  "createdAt": Any<Date>,
  "creatorId": "1",
  "deletedAt": Any<Date>,
  "githubId": "5678",
  "githubName": "foo/repo3",
  "id": "3",
  "installationId": "1",
  "reason": "slack app uninstalled",
  "settings": Object {
    "commits": true,
    "pulls": true,
  },
  "slackWorkspaceId": "1",
  "type": "repo",
  "updatedAt": Any<Date>,
}
`;
